# riscv-emulator

./: Cargo.toml  README.md  isa_spec.yaml
src/: decode.rs  execute.rs  lib.rs  platform.rs
tests/: run_elf.rs
tests/binaries/: rv32mi-p-csr  rv32mi_p_breakpoint  rv32mi_p_ebreak  rv32mi_p_ecall  rv32mi_p_illegal  rv32mi_p_lh_misaligned  rv32mi_p_lw_misaligned  rv32mi_p_ma_addr  rv32mi_p_ma_fetch  rv32mi_p_mcsr  rv32mi_p_sh_misaligned  rv32mi_p_shamt  rv32mi_p_sw_misaligned  rv32mi_p_zicntr  rv32ui-p-addi  rv32ui-p-and  rv32ui-p-andi  rv32ui-p-beq  rv32ui-p-bge  rv32ui-p-bltu  rv32ui-p-fence_i  rv32ui-p-jal  rv32ui-p-jalr  rv32ui-p-lb  rv32ui-p-lh  rv32ui-p-lui  rv32ui-p-or  rv32ui-p-ori  rv32ui-p-sll  rv32ui-p-slli  rv32ui-p-slt  rv32ui-p-sltiu  rv32ui-p-sltu  rv32ui-p-srai  rv32ui-p-srl  rv32ui-p-srli  rv32ui_p_add  rv32ui_p_auipc  rv32ui_p_bgeu  rv32ui_p_blt  (+94 more)
