[package]
name = "riscv-emulator"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
num_enum = "0.5.9"

# FIXME: Exclusivity
[features]
default = ["rv32i"]
rv32i = []
rv64i = []
